--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     --azul-principal: #38a9f4;
     --texto-escuro: #2c3e50;
     --cinza-texto: #555;
-    --fundo-pagina: #6e8089;
+    --fundo-pagina: #d0d8dc;
     --branco: #ffffff;
     --borda: #eef2f5;
     --sucesso: #28a745;
